--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "bootstrap": "5.1.3",
     "clsx": "^2.1.0",
     "http-server": "^14.1.1",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-bootstrap": "2.8.0",
+    "react-datepicker": "4.3.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "7.45.4",
+    "react-quill": "^2.0.0",
     "react-redux": "8.1.2",
     "react-router-dom": "6.15.0",
     "react-scripts": "5.0.1",
